corrected style mistakes

--- a/historia.html
+++ b/historia.html
@@ -77,7 +77,7 @@
         <div class="table-cell">
           <div class="container no-padd">
             <div class="row vertical-wrap">
-              <div class="col-lg-6 col-lg-offset-3 col-sm-12 col-sm-offset-0">
+              <div class="col-lg-6 col-lg-offset-3 col-sm-12 col-sm-offset-0" style="display: block; margin-left: auto; margin-right: auto;">
                 <div class="simple-item color-type-1 text-center">
                   <div class="main-title">
                     <h1 class="h1 title caption">Nuestra historia.</h1>
@@ -134,7 +134,6 @@
                   <div class="empty-sm-30 empty-xs-30"></div>
                   <div class="col-sm-12">
                     <div class="wrapp-border">
-                      <span class="page-span-5 page-span red-block left"></span>
                       <img src="images/history-2.png" alt="" class="full-img">
                     </div>
                   </div>
@@ -142,7 +141,6 @@
               </div>
               <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="wrapp-border">
-                  <span class="page-span-6 page-span right red-block red-block-opposite"></span>
                   <img src="images/history-3.png" alt="" class="full-img">
                 </div>
               </div>
