--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
                   <div class="simple-text xs news-data">
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
-                  <div class="simple-text">
+                  <div class="simple-text mixology-description">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
-                      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitationlabore</p>
                   </div>
                 </div>
               </div>
@@ -251,7 +251,7 @@
                   <div class="simple-text xs news-data">
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
-                  <div class="simple-text">
+                  <div class="simple-text mixology-description">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
@@ -281,7 +281,7 @@
                   <div class="simple-text xs news-data">
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
-                  <div class="simple-text">
+                  <div class="simple-text mixology-description">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
@@ -305,7 +305,7 @@
 
     <div id="pinContainer">
       <section class="panel plata">
-        <div class="bg auto pos-left-bottom md-center" style="background-image: url(images/silver.png); background-size:50%;"
+        <div class="bg auto pos-left-bottom md-center bottle-adjustment" style="background-image: url(images/silver.png); background-size:50%;"
           data-bottom-center="opacity: 0" data-top="opacity: 1"></div>
         <div class="empty-lg-140 empty-md-100 empty-sm-60 empty-xs-60"></div>
         <div class="empty-lg-100 empty-md-70 empty-sm-0 empty-xs-0"></div>
@@ -328,6 +328,9 @@
                   <span class="txt">COMPRAR</span>
                 </a>
               </div>
+              <div class="col-md-6 col-xs-12 bottle-for-phone">
+                <img class="bottle-for-phone-img" src="images/silver.png" alt="silver" />
+               </div>
             </div>
           </div>
         </div>
@@ -335,7 +338,7 @@
         <div class="empty-lg-140 empty-md-100 empty-sm-60 empty-xs-60"></div>
       </section>
       <section class="panel sangre">
-        <div class="bg auto pos-right-bottom md-center" style="background-image: url(images/blood.png); background-size:50%;"
+        <div class="bg auto pos-right-bottom md-center bottle-adjustment" style="background-image: url(images/blood.png); background-size:50%;"
           data-bottom-center="opacity: 0" data-top="opacity: 1"></div>
         <div class="empty-lg-140 empty-md-100 empty-sm-60 empty-xs-60"></div>
         <div class="empty-lg-100 empty-md-70 empty-sm-0 empty-xs-0"></div>
@@ -357,7 +360,9 @@
                   <span class="txt">COMPRAR</span>
                 </a>
               </div>
-              <div class="col-md-6 col-xs-12"></div>
+              <div class="col-md-6 col-xs-12 bottle-for-phone">
+               <img class="bottle-for-phone-img" src="images/blood.png" alt="blood" />
+              </div>
             </div>
           </div>
         </div>
@@ -365,7 +370,7 @@
         <div class="empty-lg-140 empty-md-100 empty-sm-60 empty-xs-60"></div>
       </section>
       <section class="panel premium">
-        <div class="bg auto pos-left-bottom md-center" style="background-image: url(images/premium.png); background-size:50%;"
+        <div class="bg auto pos-left-bottom md-center bottle-adjustment" style="background-image: url(images/premium.png); background-size:50%;"
           data-bottom-center="opacity: 0" data-top="opacity: 1"></div>
         <div class="empty-lg-140 empty-md-100 empty-sm-60 empty-xs-60"></div>
         <div class="empty-lg-100 empty-md-70 empty-sm-0 empty-xs-0"></div>
@@ -388,6 +393,9 @@
                   <span class="txt">COMPRAR</span>
                 </a>
               </div>
+              <div class="col-md-6 col-xs-12 bottle-for-phone">
+                <img class="bottle-for-phone-img" src="images/premium.png" alt="premium" />
+               </div>
             </div>
           </div>
         </div>
