--- a/mezcales.html
+++ b/mezcales.html
@@ -77,7 +77,7 @@
         <div class="table-cell">
           <div class="container no-padd">
             <div class="row vertical-wrap">
-              <div class="col-lg-6 col-lg-offset-3 col-sm-12 col-sm-offset-0">
+              <div class="col-lg-6 col-lg-offset-3 col-sm-12 col-sm-offset-0" style="display: block; margin-left: auto; margin-right: auto;">
                 <div class="simple-item color-type-1 text-center">
                   <div class="main-title">
                     <h1 class="h1 title caption">Nuestros mezcales.</h1>
@@ -112,6 +112,7 @@
                     ligero en aromas y sabores, la triple destilación elimina la rudeza agresividad natural-típica de
                     un buen Mezcal, originando un mezcal exquisito.</p>
                 </div>
+                <div class="empty-sm-60 empty-xs-40"></div>
               </div>
             </div>
           </div>
@@ -135,6 +136,7 @@
                     juego y combinación de aromas distintivos de un proceso artesanal, así como de las materias primas
                     y herramientas con las que se elabora. </p>
                 </div>
+                <div class="empty-sm-60 empty-xs-40"></div>
               </div>
             </div>
           </div>
@@ -158,6 +160,7 @@
                       no se percibe la rudeza y agresividad de uno tradicional. Mezcal para paladares sabios.
                       Inimaginable para algunos, resulta ser un poco más suave gracias a su triple destilación. </p>
                   </div>
+                  <div class="empty-sm-60 empty-xs-40"></div>
                 </div>
               </div>
             </div>
