--- a/mixology-detail.html
+++ b/mixology-detail.html
@@ -107,7 +107,7 @@
                           <div class="empty-sm-20  empty-xs-20"></div>
                         </div>
                         <div class="empty-sm-30"></div>
-                        <a href="mixologia-detalle.html" class="page-button button-style-1"><span class="txt">Buscar</span></a>
+                        <a href="#" class="page-button button-style-1"><span class="txt">Buscar</span></a>
                       </form>
                     </div>
                   </div>
@@ -138,10 +138,10 @@
         </div>
         <div class="empty-sm-50 empty-xs-40"></div>
         <div class="category-pills">
-          <a href="mixologia-detalle.html" class="page-button button-style-1"><span class="txt">Amargas</span></a>
-          <a href="mixologia-detalle.html" class="page-button button-style-1"><span class="txt">Dulces</span></a>
-          <div href="mixologia-detalle.html" class="page-button button-style-1 type-4"><span class="txt">Tropicales</span></div>
-          <a href="mixologia-detalle.html" class="page-button button-style-1"><span class="txt">Veraniegas</span></a>
+          <a href="#" class="page-button button-style-1"><span class="txt">Amargas</span></a>
+          <a href="#" class="page-button button-style-1"><span class="txt">Dulces</span></a>
+          <div href="#" class="page-button button-style-1 type-4"><span class="txt">Tropicales</span></div>
+          <a href="#" class="page-button button-style-1"><span class="txt">Veraniegas</span></a>
         </div>
         <div class="row">
           <div class="col-md-4 col-xs-12">
@@ -151,7 +151,7 @@
                 <div class="image hover-zoom">
                   <img src="images/mixology-1.png" alt="" class="full-img">
                   <div class="vertical-align full menu-button">
-                    <a href="mixologia-detalle.html" class="page-button button-style-1">
+                    <a href="#" class="page-button button-style-1">
                       <span class="txt">Leer más</span>
                     </a>
                   </div>
@@ -181,7 +181,7 @@
                 <div class="image hover-zoom">
                   <img src="images/mixology-2.png" alt="" class="full-img">
                   <div class="vertical-align full menu-button">
-                    <a href="mixologia-detalle.html" class="page-button button-style-1">
+                    <a href="#" class="page-button button-style-1">
                       <span class="txt">Leer más</span>
                     </a>
                   </div>
@@ -211,7 +211,7 @@
                 <div class="image hover-zoom">
                   <img src="images/mixology-3.png" alt="" class="full-img">
                   <div class="vertical-align full menu-button">
-                    <a href="mixologia-detalle.html" class="page-button button-style-1">
+                    <a href="#" class="page-button button-style-1">
                       <span class="txt">Leer más</span>
                     </a>
                   </div>
@@ -241,7 +241,7 @@
                 <div class="image hover-zoom">
                   <img src="images/mixology-1.png" alt="" class="full-img">
                   <div class="vertical-align full menu-button">
-                    <a href="mixologia-detalle.html" class="page-button button-style-1">
+                    <a href="#" class="page-button button-style-1">
                       <span class="txt">Leer más</span>
                     </a>
                   </div>
@@ -271,7 +271,7 @@
                 <div class="image hover-zoom">
                   <img src="images/mixology-2.png" alt="" class="full-img">
                   <div class="vertical-align full menu-button">
-                    <a href="mixologia-detalle.html" class="page-button button-style-1">
+                    <a href="#" class="page-button button-style-1">
                       <span class="txt">Leer más</span>
                     </a>
                   </div>
@@ -301,7 +301,7 @@
                 <div class="image hover-zoom">
                   <img src="images/mixology-3.png" alt="" class="full-img">
                   <div class="vertical-align full menu-button">
-                    <a href="mixologia-detalle.html" class="page-button button-style-1">
+                    <a href="#" class="page-button button-style-1">
                       <span class="txt">Leer más</span>
                     </a>
                   </div>
@@ -331,7 +331,7 @@
                 <div class="image hover-zoom">
                   <img src="images/mixology-1.png" alt="" class="full-img">
                   <div class="vertical-align full menu-button">
-                    <a href="mixologia-detalle.html" class="page-button button-style-1">
+                    <a href="#" class="page-button button-style-1">
                       <span class="txt">Leer más</span>
                     </a>
                   </div>
@@ -361,7 +361,7 @@
                 <div class="image hover-zoom">
                   <img src="images/mixology-2.png" alt="" class="full-img">
                   <div class="vertical-align full menu-button">
-                    <a href="mixologia-detalle.html" class="page-button button-style-1">
+                    <a href="#" class="page-button button-style-1">
                       <span class="txt">Leer más</span>
                     </a>
                   </div>
@@ -391,7 +391,7 @@
                 <div class="image hover-zoom">
                   <img src="images/mixology-3.png" alt="" class="full-img">
                   <div class="vertical-align full menu-button">
-                    <a href="mixologia-detalle.html" class="page-button button-style-1">
+                    <a href="#" class="page-button button-style-1">
                       <span class="txt">Leer más</span>
                     </a>
                   </div>
@@ -421,7 +421,7 @@
                 <div class="image hover-zoom">
                   <img src="images/mixology-1.png" alt="" class="full-img">
                   <div class="vertical-align full menu-button">
-                    <a href="mixologia-detalle.html" class="page-button button-style-1">
+                    <a href="#" class="page-button button-style-1">
                       <span class="txt">Leer más</span>
                     </a>
                   </div>
@@ -451,7 +451,7 @@
                 <div class="image hover-zoom">
                   <img src="images/mixology-2.png" alt="" class="full-img">
                   <div class="vertical-align full menu-button">
-                    <a href="mixologia-detalle.html" class="page-button button-style-1">
+                    <a href="#" class="page-button button-style-1">
                       <span class="txt">Leer más</span>
                     </a>
                   </div>
@@ -481,7 +481,7 @@
                 <div class="image hover-zoom">
                   <img src="images/mixology-3.png" alt="" class="full-img">
                   <div class="vertical-align full menu-button">
-                    <a href="mixologia-detalle.html" class="page-button button-style-1">
+                    <a href="#" class="page-button button-style-1">
                       <span class="txt">Leer más</span>
                     </a>
                   </div>
