--- a/vive-mezcal.html
+++ b/vive-mezcal.html
@@ -77,7 +77,7 @@
         <div class="table-cell">
           <div class="container no-padd">
             <div class="row vertical-wrap">
-              <div class="col-lg-6 col-lg-offset-3 col-sm-12 col-sm-offset-0">
+              <div class="col-lg-6 col-lg-offset-3 col-sm-12 col-sm-offset-0" style="display: block; margin-left: auto; margin-right: auto;">
                 <div class="simple-item color-type-1 text-center">
                   <div class="main-title">
                     <h1 class="h1 title caption">Vive Mezcal</h1>
@@ -145,7 +145,6 @@
                   <div class="empty-sm-30 empty-xs-30"></div>
                   <div class="col-sm-12">
                     <div class="wrapp-border">
-                      <span class="page-span-5 page-span red-block left"></span>
                       <img src="images/vive-2.png" alt="" class="full-img">
                     </div>
                   </div>
@@ -153,7 +152,6 @@
               </div>
               <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="wrapp-border">
-                  <span class="page-span-6 page-span right red-block red-block-opposite"></span>
                   <img src="images/vive-3.png" alt="" class="full-img">
                 </div>
               </div>
@@ -178,7 +176,6 @@
                   <div class="empty-sm-30 empty-xs-30"></div>
                   <div class="col-sm-12">
                     <div class="wrapp-border">
-                      <span class="page-span-5 page-span red-block left"></span>
                       <img src="images/vive-5.png" alt="" class="full-img">
                     </div>
                   </div>
@@ -186,7 +183,6 @@
               </div>
               <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="wrapp-border">
-                  <span class="page-span-6 page-span right red-block red-block-opposite"></span>
                   <img src="images/vive-6.png" alt="" class="full-img">
                 </div>
               </div>
@@ -195,7 +191,7 @@
           <div class="col-md-6">
             <div class="simple-item text-center">
               <div class="line-sepp"></div>
-              <div class="empty-sm-40"></div>
+              <div class="empty-xs-40"></div>
               <h2 class="h2 sub-title main-col">Nuestro hogar</h2>
               <div class="empty-sm-40 empty-xs-40"></div>
               <div class="box-padd">
