Added bottle names in index and corrected Urajan name

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <div class="empty-sm-15 empty-xs-10"></div>
               <h2 class="h2 tt title">El culto a la historia</h2>
               <div class="empty-sm-15 empty-xs-10"></div>
-              <span class="h5 color-2">Compartimos el legado de Huraján: la leyenda de Nombre de Dios</span>
+              <span class="h5 color-2">Compartimos el legado de Uraján: la leyenda de Nombre de Dios</span>
               <div class="empty-sm-35 empty-xs-20"></div>
               <div class="col-md-10 col-md-offset-1 col-sm-12">
                 <div class="simple-text">
@@ -310,7 +310,7 @@
             <div class="col-md-6 col-xs-12"></div>
             <div class="col-md-6 col-xs-12">
               <div class="simple-text text-center color-type-2">
-                <div class="sub-title main-col" style="color: gray">(38% Alc.)</div>
+                <div class="sub-title main-col" style="color: gray">38% Alc. - Plata</div>
                 <div class="empty-sm-15 empty-xs-10"></div>
                 <h2 class="h2 tt title">Mezcal Triple - Destilado</h2>
                 <div class="empty-sm-35 empty-xs-20"></div>
@@ -345,7 +345,7 @@
           <div class="row item-animation scroll-type-1 md-fix">
             <div class="col-md-6 col-xs-12">
               <div class="simple-text text-center color-type-2">
-                <div class="sub-title main-col">(48% Alc.)</div>
+                <div class="sub-title main-col">48% Alc. - Sangre de Indio</div>
                 <div class="empty-sm-15 empty-xs-10"></div>
                 <h2 class="h2 tt title">Mezcal Bi - Destilado</h2>
                 <div class="empty-sm-35 empty-xs-20"></div>
@@ -383,7 +383,7 @@
             <div class="col-md-6 col-xs-12"></div>
             <div class="col-md-6 col-xs-12">
               <div class="simple-text text-center color-type-2">
-                <div class="sub-title main-col" style="color: goldenrod">(52% Alc.)</div>
+                <div class="sub-title main-col" style="color: goldenrod">52% Alc. - Premium/Fantasma</div>
                 <div class="empty-sm-15 empty-xs-10"></div>
                 <h2 class="h2 tt title">Mezcal Triple - Destilado</h2>
                 <div class="empty-sm-35 empty-xs-20"></div>
