Added language selection

--- a/tienda.html
+++ b/tienda.html
@@ -146,6 +146,18 @@
               <li>
                 <a href="distribuidor.html">QUIERO SER DISTRIBUIDOR</a>
               </li>
+              <li>
+                  <form action="#" method="POST">
+                    <button action="submit" href="es-MX" selected><img height="13" src="images/mexico_round_icon_64.png"
+                        alt="ES-MX">
+                      <p class="language-option">ES</p>
+                    </button>
+                    <button action="submit" href="EN"><img height="13" src="images/united_states_of_america_round_icon_64.png"
+                        alt="EN">
+                      <p class="language-option">EN</p>
+                    </button>
+                  </form>
+                </li>
             </ul>
           </nav>
         </div>
