--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
               <li>
                 <a href="distribuidor.html">QUIERO SER DISTRIBUIDOR</a>
               </li>
+              <li>
+                <form action="#" method="POST">
+                  <button action="submit" href="es-MX" selected><img height="13" src="images/mexico_round_icon_64.png"
+                      alt="ES-MX">
+                    <p class="language-option">ES</p>
+                  </button>
+                  <button action="submit" href="EN"><img height="13" src="images/united_states_of_america_round_icon_64.png"
+                      alt="EN">
+                    <p class="language-option">EN</p>
+                  </button>
+                </form>
+              </li>
             </ul>
           </nav>
         </div>
@@ -319,7 +331,8 @@
                     <div class="col-md-6 col-xs-12 bottle-for-phone">
                       <img class="bottle-for-phone-img" src="images/silver.png" alt="silver" />
                     </div>
-                    <p class="bottle-adjustment">Suave, refinado, avainillado y muy sutil al paladar de las damas. Por su baja graduación en
+                    <p class="bottle-adjustment">Suave, refinado, avainillado y muy sutil al paladar de las damas. Por
+                      su baja graduación en
                       alcohol y su delicadez, es apto para aquellas personas que degustaran el Mezcal por primera
                       vez. Es ligero en aromas y sabores, la triple destilación elimina la rudeza agresividad
                       natural-típica de un buen Mezcal, originando un mezcal exquisito.</p>
