--- a/mixologia.html
+++ b/mixologia.html
@@ -58,17 +58,17 @@
                 <a href="distribuidor.html">QUIERO SER DISTRIBUIDOR</a>
               </li>
               <li>
-                  <form action="#" method="POST">
-                    <button action="submit" href="es-MX" selected><img height="13" src="images/mexico_round_icon_64.png"
-                        alt="ES-MX">
-                      <p class="language-option">ES</p>
-                    </button>
-                    <button action="submit" href="EN"><img height="13" src="images/united_states_of_america_round_icon_64.png"
-                        alt="EN">
-                      <p class="language-option">EN</p>
-                    </button>
-                  </form>
-                </li>
+                <form action="#" method="POST">
+                  <button action="submit" href="es-MX" selected><img height="13" src="images/mexico_round_icon_64.png"
+                      alt="ES-MX">
+                    <p class="language-option">ES</p>
+                  </button>
+                  <button action="submit" href="EN"><img height="13" src="images/united_states_of_america_round_icon_64.png"
+                      alt="EN">
+                    <p class="language-option">EN</p>
+                  </button>
+                </form>
+              </li>
             </ul>
           </nav>
         </div>
@@ -178,7 +178,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                      eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -208,9 +209,11 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                      eiusmod tempor incididunt ut
                       labore
-                      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitationLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
+                      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitationLorem ipsum dolor sit
+                      amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
                   </div>
                 </div>
               </div>
@@ -238,7 +241,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                      eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -268,7 +272,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                      eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -298,7 +303,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                      eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -328,7 +334,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                      eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -358,7 +365,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                      eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -388,7 +396,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                      eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -418,7 +427,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                      eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -448,7 +458,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                      eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -478,7 +489,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                      eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -508,7 +520,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                      eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -544,6 +557,19 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="js/all.js"></script>
+<script>
+function ellipsizeTextBox(id) {
+    var el = document.getElementsByClassName(id);
+    for (i = 0; i <= el.length; i++){
+      var wordArray = el[i].innerHTML.split(' ');
+      while(el[i].scrollHeight > el[i].offsetHeight) {
+          wordArray.pop();
+          el[i].innerHTML = wordArray.join(' ') + '...';
+      }
+    }
+}
+ellipsizeTextBox('mixology-description')
+</script>
 </body>
 
 </html>
